--- a/qubit_lite.routing.yml
+++ b/qubit_lite.routing.yml
@@ -1,4 +1,3 @@
-
 qubit_lite.qubit_lite_settings_form:
   path: '/admin/config/qubit_lite/settings'
   defaults:
@@ -8,4 +7,7 @@ qubit_lite.qubit_lite_settings_form:
     _permission: 'access administration pages'
   options:
     _admin_route: TRUE
-
+qubit_lite.cross_domain_tracking:
+  path: '/assets/includes/qubit/opentag.html'
+  defaults:
+    _controller: '\Drupal\qubit_lite\Controller\QubitTrackingController:build'
