CMS-2193-update-d9 - making d9 compliant

--- a/qubit_lite.info.yml
+++ b/qubit_lite.info.yml
@@ -1,5 +1,5 @@
 name: Qubit Lite
 type: module
 description: A small iframe version of the Qubit tracking integration
-core: 8.x
+core_version_requirement: ^8 || ^9 || ^10
 package: Statistics
